# osc-counect-rs

./: .gdbinit.disabled  .gitmodules  Cargo.toml  README.md  build.rs  log.txt  lv_conf.h  memory.x  openocd.cfg
.cargo/: config  config.toml
display-interface-fsmc/: Cargo.toml
display-interface-fsmc/.cargo/: config  config.toml
display-interface-fsmc/examples/: fps.rs
display-interface-fsmc/src/: lib.rs
embedded-alloc-c/: Cargo.toml
embedded-alloc-c/src/: lib.rs
gu256x128c/: Cargo.toml
gu256x128c/src/: lib.rs
scripts/: debug.sh
src/: app.rs  common.rs  esp.rs  esp32c3.rs  fsmc.rs  gui.rs  main.rs  sim.rs
src/app/: devices.rs  gui.rs  input.rs  misc.rs  mod.rs  state.rs  unit.rs
src/app/gui/: color.rs  menu.rs  mod.rs  overview.rs  waveform.rs
tm1668/: Cargo.toml
tm1668/src/: group.rs  lib.rs
ui/: simple.slint
