[package]
name = "osc-counect-rs"
version = "0.1.0"
edition = "2021"
default-run = "osc-counect"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.5.0", path = "./embassy/embassy-sync", features = [
    # "defmt",
] }
embassy-executor = { version = "0.5.0", path = "./embassy/embassy-executor", features = [
    "executor-thread",
    # "defmt",
    "integrated-timers",
    "task-arena-size-12288"
    # "task-arena-size-10240"
] }
embassy-time = { version = "0.3.0", path = "./embassy/embassy-time", features = [
    # "defmt",
    # "defmt-timestamp-uptime",
] }
# embassy-usb = { version = "0.1.0", path = "./embassy/embassy-usb", features = [
#     "defmt",
# ] }
# embassy-usb-dfu = { version = "0.1.0", path = "./embassy/embassy-usb-dfu", features = [
#     "dfu",
# ] }
# embassy-boot = { version = "0.2.0", path = "./embassy/embassy-boot", features = [
#     "defmt",
# ] }
# embassy-boot-stm32 = { version = "0.2.0", path = "./embassy/embassy-boot-stm32", features = [
#     "defmt",
# ] }
# embassy-usb-driver = { version = "0.1.0", path = "./embassy/embassy-usb-driver" }
embassy-futures = { version = "0.1.0", path = "./embassy/embassy-futures" }

futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }

cstr_core = "0.2.6"
display-interface = "0.5.0"
embedded-alloc = "0.5.1"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
format_no_std = "1.0.2"
fugit = "0.3.7"
nb = "1"
num_enum = { version = "0.7.2", default-features = false }
libm = { version = "0.2.8", features = ["rand"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-stm32 = { version = "0.1.0", path = "./embassy/embassy-stm32", features = [
    # "defmt",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
ili9341 = { path = "ili9327", features = ["async", "gray4"] }
rtt-target = "0.5.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
display-interface-fsmc = { path = "display-interface-fsmc", features = [
    "async",
] }
tm1668 = { path = "tm1668" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
embedded-graphics-simulator = "0.6.0"
env_logger = "0.11.3"

[target.'cfg(target_arch = "x86_64")'.dependencies.defmt]
package = "log"
version = "0.4.21"

[workspace]
members = ["tm1668", "display-interface-fsmc", "ili9327"]

[profile.dev]
opt-level = 0
#opt-level = 0
debug = true
lto = true

[profile.release]
opt-level = 3
# opt-level = "s"
debug = 2
lto = true
#strip = false

# [target.'cfg(all(target_arch = "arm", target_os = "none"))'.features]
[features]
# default = ["stm32h743vi"]
default = ["stm32f103vc"]
# default = ["simulator"]
stm32f103vc = ["embassy-stm32/stm32f103vc", "embedded"]
stm32h743vi = ["embassy-stm32/stm32h743vi", "embedded"]
embedded = ["embassy-time/tick-hz-1_000_000", "embassy-executor/arch-cortex-m"]
simulator = [
    "embassy-time/std",
    # "embassy-time/tick-hz-32_768",
    "embassy-executor/arch-std",
    "embassy-sync/std",
]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]

[[bin]]
name = "osc-counect"
path = "src/main.rs"

[[bin]]
name = "simulator"
path = "src/sim.rs"
