[package]
name = "osc-counect-rs"
version = "0.1.0"
edition = "2021"
default-run = "osc-counect"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-time = { version = "0.3.0" }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-10240"] }
embassy-futures = { version = "0.1.0" }

futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }

display-interface = "0.5.0"
embedded-alloc = "0.5.1"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
format_no_std = "1.0.2"
fugit = "0.3.7"
nb = "1"
num_enum = { version = "0.7.2", default-features = false }
libm = { version = "0.2.8", features = ["rand"] }
itertools = { version = "0.12.1", default-features = false }
embedded-storage = "0.3.1"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
ili9341 = { path = "ili9327", features = [
    "async",
    # "gray4",
] }
rtt-target = "0.5.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
display-interface-fsmc = { path = "display-interface-fsmc", features = [
    "async",
] }
tm1668 = { path = "tm1668" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.11.1", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", path = "./esp-hal/esp-hal", features = [
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "async",
] }
esp-println = { version = "0.9.1" }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
embedded-graphics-simulator = "0.6.0"
env_logger = "0.11.3"
cpal = "0.15.3"

[target.'cfg(target_arch = "x86_64")'.dependencies.defmt]
package = "log"
version = "0.4.21"

[workspace]
members = ["tm1668", "display-interface-fsmc", "ili9327"]

[profile.dev]
opt-level = 1
#opt-level = 0
debug = true
lto = true

[profile.release]
opt-level = 3
# opt-level = "s"
debug = 2
lto = true
#strip = false

# [target.'cfg(all(target_arch = "arm", target_os = "none"))'.features]
[features]
# default = ["stm32h743vi"]
# default = ["stm32f103vc"]
default = ["esp32c3"]
# default = ["simulator"]
stm32f103vc = ["embassy-stm32/stm32f103vc", "embedded", "stm32"]
stm32h743vi = ["embassy-stm32/stm32h743vi", "embedded", "stm32"]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "embedded",
    "esp",
]
stm32 = [
    "embassy-time/tick-hz-1_000_000",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-thread",
    "embassy-executor/integrated-timers",
]
esp = ["embassy-time/generic-queue-8"]
embedded = []
simulator = [
    "embassy-time/std",
    # "embassy-time/tick-hz-32_768",
    "embassy-executor/arch-std",
    "embassy-sync/std",
]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
]
waveform_3bit = []
# overclocking = ["embassy-stm32/overclocking"]

[[bin]]
name = "osc-counect"
path = "src/main.rs"

[[bin]]
name = "osc-esp32c3"
path = "src/esp32c3.rs"

[[bin]]
name = "simulator"
path = "src/sim.rs"

[build-dependencies]
chrono = "0.4.37"
