[package]
name = "display-interface-fsmc"
version = "0.1.0"
edition = "2021"
authors = ["Chiro <chiro2001@163.com>"]
description = "A display interface library for STM32F103 FSMC, tested on board counect with ili9341."

[dependencies]
display-interface = "0.4.1"
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [ "defmt", "stm32f103vc", "unstable-pac", "memory-x", "time-driver-any" ]  }
