[package]
name = "gu256x128c"
version = "0.1.0"
edition = "2021"

[dependencies]
display-interface = "0.5.0"
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4.0"
defmt = { version = "0.3", optional = true }

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "embedded-graphics-core/defmt",
    "display-interface/defmt-03",
]
